Fix `API is behind a firewall` checkbox clickability and position

--- a/src/scss/_documentation.scss
+++ b/src/scss/_documentation.scss
@@ -57,6 +57,7 @@
 
 .documentation-header {
   background: $color-console-documentation-header;
+  position: relative;
 }
 
 .root-documentation {
