--- a/src/scss/_resource.scss
+++ b/src/scss/_resource.scss
@@ -412,6 +412,7 @@
   color: $color-sidebar-subheader-text;
   font-size: 13px;
   margin-bottom: 5px;
+  z-index: 1;
 
   a {
     color: $color-sidebar-subheader-text;
